feat: add initial experimental work for developmental purposes

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,14 @@ DB_USER=unlocked
 DB_PASSWORD=dev
 DB_NAME=unlocked
 
+# Used during registering the application
+BRIGHTSPACE_SCOPE=accommodations:profile:manage,read accountsettings:locale:read,update attributes:schemas:read attributes:users:delete,read,update datahub:dataexports:download,read datasets:bds:read globalusermapping:mapping:write localauthenticationsecurity:overrides:manage,read organizations:image:read role:detail:create,read users:activation:read,update users:own_profile:read users:own_pronoun:read,update users:password:delete,write users:profile:read users:userdata:create,delete,read,update
+BRIGHTSPACE_AUTH_URL=https://auth.brightspace.com/oauth2/auth
+BRIGHTSPACE_TOKEN_URL=https://auth.brightspace.com/core/connect/token
+BRIGHTSPACE_REDIRECT_URL=https://127.0.0.1/api/oidc/keighan/brightspace/callback
+
 # when running in containers, use the the service name in place of localhost
-APP_URL=http://localhost
+APP_URL=https://localhost
 APP_ENV=dev
 LOG_LEVEL=debug
 
