--- a/config/dev.nginx.conf
+++ b/config/dev.nginx.conf
@@ -1,9 +1,14 @@
 server {
-  listen 80;
+  listen 443 ssl;
   server_name localhost;
   proxy_headers_hash_bucket_size 256;
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
+
+  ssl_certificate /etc/nginx/certs/selfsigned.crt;
+  ssl_certificate_key /etc/nginx/certs/selfsigned.key;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!aNULL:!MD5;
 
    location /api/ {
         proxy_pass http://server:8080;
