--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,13 @@ services:
   rev_proxy:
     image: nginx:1.21.3-alpine
     ports:
-      - 80:80
+      - 443:443
     volumes:
       - ./config/dev.nginx.conf:/etc/nginx/conf.d/default.conf
       - logs:/var/log/nginx/
+      - type: bind
+        source: ./config/nginx/certs
+        target: /etc/nginx/certs
     networks:
       - intranet
     restart: unless-stopped 
@@ -58,7 +61,7 @@ services:
       - APP_DSN=postgres://unlocked:dev@postgres:5432/unlocked
       - APP_ENV=production
       - LOG_LEVEL=debug
-      - APP_URL=http://127.0.0.1
+      - APP_URL=https://127.0.0.1
       - APP_KEY=base64:NTQxODNmNDMyM2YzNzdiNzM3NDMzYTFlOTgyMjllYWQwZmRjNjg2ZjkzYmFiMDU3ZWNiNjEyZGFhOTQwMDJiNSAgLQo=
       - PROVIDER_SERVICE_URL=http://provider-service:8081
       - HYDRA_ADMIN_URL=http://hydra:4445
@@ -80,56 +83,58 @@ services:
         condition: service_healthy
 
   # Provider middleware
-  provider-service:
-    build:
-      context: .
-      dockerfile: provider-middleware/dev.Dockerfile
-    environment:
-      - APP_ENV=production
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=unlocked
-      - DB_PASSWORD=dev
-      - KOLIBRI_DB_PASSWORD=dev
-      - DB_NAME=unlocked
-      - NATS_URL=nats:4222
-      - NATS_USER=unlocked
-      - NATS_PASSWORD=dev
-      - APP_URL=http://server:8080 
-    networks:
-      - intranet
-    volumes:
-      - logs:/logs
-      - ./:/app 
-    ports:
-      - 8081:8081
-    restart: unless-stopped 
-    depends_on: [server]
+  # provider-service:
+  #   build:
+  #     context: .
+  #     dockerfile: provider-middleware/dev.Dockerfile
+  #   environment:
+  #     - APP_ENV=production
+  #     - APP_KEY=base64:NTQxODNmNDMyM2YzNzdiNzM3NDMzYTFlOTgyMjllYWQwZmRjNjg2ZjkzYmFiMDU3ZWNiNjEyZGFhOTQwMDJiNSAgLQo=
+  #     - DB_HOST=postgres
+  #     - DB_PORT=5432
+  #     - DB_USER=unlocked
+  #     - DB_PASSWORD=dev
+  #     - KOLIBRI_DB_PASSWORD=dev
+  #     - DB_NAME=unlocked
+  #     - NATS_URL=nats:4222
+  #     - NATS_USER=unlocked
+  #     - NATS_PASSWORD=dev
+  #     - BRIGHTSPACE_SCOPE=accommodations:profile:manage,read accountsettings:locale:read,update attributes:schemas:read attributes:users:delete,read,update content:access:read core:*:* datahub:dataexports:download,read datasets:bds:read enrollment:orgunit:read globalusermapping:mapping:write grades:access:read grades:gradeobjects:read groups:group:read localauthenticationsecurity:overrides:manage,read lti:links:read managefiles:files:read organizations:image:read organizations:organization:read orgunits:course:read quizzing:access:read quizzing:quizzes:read role:detail:create,read users:activation:read,update users:own_profile:read users:own_pronoun:read,update users:password:delete,write users:profile:read users:userdata:create,delete,read,update
+  #   networks:
+  #     - intranet
+  #   volumes:
+  #     - logs:/logs
+  #     - ./:/app 
+  #   ports:
+  #     - 8082:8082
+  #   restart: unless-stopped 
+  #   depends_on: [server]
 
   # Scheduler + task runner for provider-middleware
-  cron-tasks:
-    build:
-      context: .
-      dockerfile: ./backend/tasks/dev.Dockerfile
-    environment:
-      - LOG_LEVEL=debug
-      - NATS_URL=nats:4222
-      - NATS_USER=unlocked
-      - NATS_PASSWORD=dev
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=unlocked
-      - DB_PASSWORD=dev
-      - DB_NAME=unlocked
-      - MIDDLEWARE_CRON_SCHEDULE=0 22 * * *
-    networks:
-      - intranet
-    volumes:
-      - logs:/logs
-      - ./:/app 
-    depends_on:
-      provider-service:
-        condition: service_started
+  # cron-tasks:
+  #   build:
+  #     context: .
+  #     dockerfile: ./backend/tasks/dev.Dockerfile
+  #   environment:
+  #     - LOG_LEVEL=debug
+  #     - NATS_URL=nats:4222
+  #     - NATS_USER=unlocked
+  #     - NATS_PASSWORD=dev
+  #     - DB_HOST=postgres
+  #     - DB_PORT=5432
+  #     - DB_USER=unlocked
+  #     - DB_PASSWORD=dev
+  #     - DB_NAME=unlocked
+  #     - MIDDLEWARE_CRON_SCHEDULE=0 22 * * *
+  #   networks:
+  #     - intranet
+  #   volumes:
+  #     - logs:/logs
+  #     - ./:/app 
+  #     - csvs:/csvs
+  #   depends_on:
+  #     provider-service:
+  #       condition: service_started
 
   keto-migrate:
     image: oryd/keto:v0.12.0-alpha.0
@@ -264,7 +269,12 @@ volumes:
       type: none
       o: bind
       device: ./config
-
+  csvs:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./csvs
   logs:
     driver: local
     driver_opts:
